<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_all_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_all_music"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_all_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_all_music" />

        <TextView
            android:id="@+id/text_all_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_all_audio"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_all_music" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_all_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_all_audio" />

        <TextView
            android:id="@+id/text_alternativerock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_alternativerock"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_all_audio" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_alternativerock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_alternativerock" />

        <TextView
            android:id="@+id/text_ambient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_ambient"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_alternativerock" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_ambiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_ambient" />

        <TextView
            android:id="@+id/text_classical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_classical"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_ambiant" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_classcical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_classical" />

        <TextView
            android:id="@+id/text_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_genre_name_country"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_classcical" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_country" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
